# Verdex

./: .gitignore  HANDOFF.md  README.md  README_CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-icon.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatInput.tsx  HelpModal.tsx  JudgeMessage.tsx  MoAConfigBar.tsx  PanelCollapseGroup.tsx  SettingsModal.tsx  Sidebar.tsx  TemplatesModal.tsx  UserMessage.tsx
src/hooks/: useMoa.ts
src/i18n/: en.json  index.ts  zh.json
src/services/: config.template.json  configStore.ts  httpClient.ts  moaEngine.ts  modelContextDB.ts
src/types/: moa.ts
test/: httpClient.test.ts  moaEngine.test.ts
