[package]
name = "verdex"
version = "0.1.2"
description = "Verdex — local Mixture-of-Agents (MoA) synthesis engine"
authors = ["Verdex"]
edition = "2021"
rust-version = "1.70"

# The library is what Tauri links against; the binary is just a thin wrapper.
[lib]
name = "verdex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
